...
            FloatingActionButton(
                onClick = {
                    navController.navigate(Screen.AddEditNoteScreen.route)
            },
            backgroundColor = MaterialTheme.colors.primary
            ) {
                Icon(imageVector = Icons.Default.Add, contentDescription = "Add")
            }
        },
        scaffoldState = scaffoldState
    ) {
        Column(
            modifier = Modifier
...
                IconButton(onClick = {
                    viewModel.onEvent(NotesEvent.ToggleOrderSection)
                },
            ) {
                  Icon(
                      imageVector = Icons.Default.Sort,
                      contentDescription = "Sort"
                  )
                }
            }
            AnimatedVisibility(
                visible = state.isOrderSectionVisible,
                enter = fadeIn() + slideInVertically(),
...
